--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,6 +23,7 @@
         }
       </style>
     </noscript>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
   </head>
   <body id="top">
     <header class="d-print-none" style="height: 2em;"></header>
