--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -40,9 +40,9 @@
     <div class="row">
     <div class="col-10 col-md-6 mx-auto">
       <ul class="navbar nav">
-        <li><a href="//rath.phd/">Home</a></li>
-        <li><a href="//rath.phd/about/">About</a></li>
-        <li><a href="/rath_cv_web.pdf">Download CV</a></li>
+        <li><a href="//www.rath.phd/">Home</a></li>
+        <li><a href="//www.rath.phd/about/">About</a></li>
+        <li><a href="//www.rath.phd/rath_cv_web.pdf">Download CV</a></li>
     </ul>
     </div>
     </div>
